--- a/anchor_codegen/Cargo.toml
+++ b/anchor_codegen/Cargo.toml
@@ -15,3 +15,4 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 flate2 = "1"
 lazy_static = "1"
+anchor_traits = { path = "../anchor_traits" }
