--- a/anchor_macro/Cargo.toml
+++ b/anchor_macro/Cargo.toml
@@ -13,3 +13,4 @@ syn = { version = "1", features = ["full", "extra-traits"] }
 quote = "1"
 proc-macro-error = "1"
 anchor_codegen = { path = "../anchor_codegen" }
+anchor_traits = { path = "../anchor_traits" }
